samples/_failures_safe/1761505233_9e3399_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44a47b50.c: In function ‘bfs’:
./samples/SAFE/__tmp_44a47b50.c:164:13: error: expected declaration or statement at end of input
  164 |             if (neighbor && !neighbor->visited) {
      |             ^~
./samples/SAFE/__tmp_44a47b50.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_44a47b50.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_44a47b50.c:164:13: error: expected declaration or statement at end of input
